Fix a layout bug

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -85,7 +85,6 @@ span.highlight {
 }
 
 .icon {
-    font-size: 1.25em;
     color: $orange;
 }
 
@@ -599,14 +598,10 @@ section.contact {
             display: block;
             line-height: 1.75em;
         }
-        span {
-            vertical-align: text-bottom;
-        }
         a {
             color: $blue;
             text-decoration: none;
             font-weight: 600;
-            vertical-align: text-bottom;
         }
         a:hover {
             color: darken($blue, 5%);
